# OOP

./: CMakeLists.txt  main.cpp
commands/: attack_command.cpp  attack_command.h  command.cpp  command.h  create_object_command.cpp  create_object_command.h  move_command.cpp  move_command.h  object_die_command.cpp  object_die_command.h  pick_up_neutral_object_command.cpp  pick_up_neutral_object_command.h
common/: coordinates.h
facade/: facade.cpp  facade.h
facade/handlers/: attack_handler.cpp  attack_handler.h  create_unit_handler.cpp  create_unit_handler.h  handler.cpp  handler.h  handlers_factory.cpp  handlers_factory.h  move_handler.cpp  move_handler.h  none_handler.cpp  none_handler.h  pickup_neutral_object_handler.cpp  pickup_neutral_object_handler.h
field/: cell.cpp  cell.h  field.cpp  field.h  field_iterator.cpp  field_iterator.h
field/landscape/: landscape.cpp  landscape.h
logger/: datetime_logger.cpp  datetime_logger.h  logger.cpp  logger.h  logger_adapter.cpp  logger_adapter.h  logger_decorator.cpp  logger_decorator.h  logger_proxy.cpp  logger_proxy.h
mediator/: component.cpp  component.h  mediator.cpp  mediator.h
objects/: object.cpp  object.h
objects/attributes/: attack_attribute.cpp  attack_attribute.h  base_attribute.cpp  base_attribute.h  protected_attribute.cpp  protected_attribute.h
objects/base/: balance.h  base.cpp  base.h
observer/: publisher.cpp  publisher.h  subscriber.h
save_load/: load_command.cpp  load_command.h  memento.cpp  memento.h  originator.h  save_command.cpp  save_command.h  save_load_command.cpp  save_load_command.h
(+63 files in other folders)
